# CellCap

./: .flake8  .gitignore  01_data_setup.ipynb  02_test_run.ipynb  03_simulated_data.ipynb  Levy_CellCap_neuron.ipynb  README.md  README.rst  Sim1.ipynb  VariationalCPA_adv.py  VariationalCPA_adv_attent_v3.py  VariationalCPA_adv_scaler_v2.py  build_docker.sh  data_setup.ipynb  data_simulation.ipynb  pyproject.toml  readthedocs.yml  requirements-dev.txt  requirements-rtd.txt  requirements.txt  setup.py  test_run.ipynb
.github/workflows/: code_formatting.yml  run_pytest.yml
cellcap/: __init__.py  base_cli.py  metrics.py  mixins.py  model.py  module.py  module_old.py  module_pyro.py  module_pytorch.py  module_v1.py  scvi_module.py  training_plan.py  utils.py
cellcap/nn/: __init__.py  advclassifier.py  attention.py  autoreldetermin.py  decoder.py  donorencoder.py  drugencoder.py  gradient_reversal.py
cellcap/tests/: conftest.py  test.h5ad  test_integration.py  test_logging.py  test_refactor_utility.py  test_save_load.py
cellcap/validation/: plot.py  simulation.py  stats.py
docs/source/: conf.py  index.rst
docs/source/citation/: index.rst
docs/source/installation/: index.rst
docs/source/introduction/: index.rst
docs/source/notebooks/: CellCap_human_monocytes.ipynb  (+3 more)
src/: module_pyro.py  module_pytorch.py  utils.py
src/nn/: __init__.py  advclassifier.py  attention.py  autoreldetermin.py  base.py  classifier.py  decoder.py  donorencoder.py  drugencoder.py  encoder.py  model.py
src/tests/: conftest.py  test_integration.py
tests/: test_integration.py
(+1 files in other folders)
