[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"

[project]
name = "cellcap"
authors = [{name = "Yang Xu"}, {name = "Stephen Fleming"}, {name = "Mehrtash Babadi"}]
license = {text = "BSD (3-Clause)"}
description = "A variational autoencoder to model correspondence between cellular identity and perturbation response in single-cell data"
keywords = ["scRNA-seq", "perturbation", "deep learning"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3.9",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dynamic = ["version", "dependencies", "optional-dependencies"]

[project.readme]
file = "README.rst"
content-type = "text/x-rst"

[project.urls]
Homepage = "http://github.com/broadinstitute/CellCap"
Documentation = "http://cellcap.readthedocs.io"

[tool.setuptools]
zip-safe = false
include-package-data = true

[tool.setuptools.packages]
find = {namespaces = false}

[tool.setuptools.dynamic]
version = {attr = "cellcap.__version__"}
dependencies = {file = ["requirements.txt"]}
optional-dependencies.dev = {file = ["requirements-dev.txt"]}
optional-dependencies.docs = {file = ["requirements-rtd.txt"]}

[tool.setuptools.package-data]
"*" = ["cellcap.VERSION.txt"]
